--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,9 +7,9 @@ workflow:
       - when: never
 
 stages:
+   - prepare
    - test
    - build
-   - push
    - cleanup
 
 include:
@@ -56,23 +56,13 @@ test:
 sast:
    stage: test
 
-build_image:
+build_and_push:
   stage: build
   image: docker:latest
   services:
     - docker:dind
   script:
     - docker build -t $CI_REGISTRY_IMAGE/coordservice:$IMAGE_TAG .
-  artifacts:
-    paths:
-      - .docker
-
-push_image:
-  stage: push
-  image: docker:latest
-  services:
-    - docker:dind
-  script:
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker push $CI_REGISTRY_IMAGE/coordservice:$IMAGE_TAG
   only:
