--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,8 @@ include:
 
 variables:
    CI_REGISTRY: registry.gitlab.com
-   CI_REGISTRY_IMAGE: registry.gitlab.com/smcleaish-services/coordservice
+   CI_PROJECT_PATH: smcleaish-services/coordservice
+   CI_REGISTRY_IMAGE: registry.gitlab.com/$CI_PROJECT_PATH
    IMAGE_TAG: $CI_COMMIT_REF_NAME
    DOCKER_DRIVER: overlay2
 
@@ -63,7 +64,7 @@ build:
   services:
     - docker:dind
   script:
-    - docker build -t $CI_REGISTRY_IMAGE/coordservice:$IMAGE_TAG .
+    - docker build -t $CI_REGISTRY_IMAGE:$IMAGE_TAG .
     - echo "$CI_REGISTRY_PASSWORD" | docker login -u "$CI_REGISTRY_USER" --password-stdin $CI_REGISTRY
     - docker push $CI_REGISTRY_IMAGE:$IMAGE_TAG
   only:
